--- a/myblog/blog/static/css/main.css
+++ b/myblog/blog/static/css/main.css
@@ -1,79 +1,86 @@
 
-
-.logo {
-    font-size: 40px;
-    font-weight: bold;
-    background: linear-gradient(to right, red, yellow, green);
-    background-clip: text;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+ .nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+}
+.nav-item.dropdown .dropdown-toggle::after {
+  transition: transform 0.2s;
+}
+.nav-item.dropdown:hover .dropdown-toggle::after {
+  transform: rotate(180deg);
+}
+@media (max-width: 991px) {
+  .nav-item.dropdown:hover .dropdown-menu {
+    display: none !important;
   }
-
-.logo-sign {
-    font-size: 20px;
-    font-weight: bold;
-    background: linear-gradient(to right, red, yellow, green);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-.sign-btn:active {
-  transform: scale(0.8);
-}
-.sign-in-form {
-  height: 60%;
-  width: 40%;
-}
-
-.logo-img {
-    max-width: 50px !important;
-}
-.sign-img {
-  max-width: 40px !important;
-}
-.nav-link:hover {
-text-decoration: underline;
-transition: all 0.3s ease-in-out;
-}
-
-.searchbar::placeholder{
-  color: white !important;
-  opacity: 0.7 !important;
 }
 
 
 
 
+ .navbar-dark .form-control::placeholder {
+      color: white;
+      opacity: 0.7;
+    }
+
+    .offcanvas-start {
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .navbar-dark .form-control {
+      color: white;
+      background-color: transparent;
+      border: 1px solid #fff;
+    }
+
+    .navbar-dark .form-control:focus {
+      box-shadow: none;
+      border-color: #ccc;
+    }
+
+    .navbar-dark .nav-link {
+      color: white !important;
+    }
+
+
+/* ====================================image slider================================ */
+
+.slideImg {
+  height: 70%;
+}
 @media (max-width: 992px) {
-  form {
-    width: 50% !important;
-  }
-  .sign-in-form {
-    width: 70% !important;
-    height: 70%;
+  .slideImg {
+    height: 50%;
   }
 }
 
 @media (max-width: 768px) {
-  form {
-    width: 75% !important;
-  }
-  .sign-in-form {
-    width: 80% !important;
-    height: 70%;
-  }
-  .logo-img {
-    max-width: 40px !important;
+  .slideImg {
+    height: 40%;
   }
 }
 
 @media (max-width: 576px) {
-  form {
-    width: 100% !important;
+  .slideImg {
+    height: 30%;
   }
-  .sign-in-form {
-    width: 90% !important;
-    height: 60%;
-  }
+}
+
+/* =============================== footer =================================   */
+
+.footer {
+  background: rgb(15, 15, 15);
+}
+.footer-logo {
+    width: 13%;
+}
+@media (max-width: 992px) {
+    .footer-logo {
+        width: 20%;
+    }
+}
+@media (max-width: 768px) {
+    .footer-logo {
+        width: 30% !important;
+    }
 }
